@@ -1,3 +1,7 @@
+10 February 2008
+
+* Correct mail_month/mail_dayofyear tags.
+
 10 January 2008
 
 * Added "from" to smtp action to specify envelope from. Requested by Marco
@@ -788,4 +792,4 @@
   the mail was very rarely reallocated, now that the header is added it is.
 * Changed all the descriptions to static buffers and audited use of snprintf.
 
-$Id: CHANGES,v 1.183 2008-01-15 18:17:09 nicm Exp $
+$Id: CHANGES,v 1.184 2008-02-10 06:54:42 nicm Exp $
